src/main/frontend/components/block.css
/* ... */
.ls-card {
  height: 100%;
}

.ls-card a[data-ref="card"], .ls-card .page-reference[data-ref="card"] {
  display: none;
}

a.cloze {
  color: var(--ls-cloze-text-color);
}

a.cloze-revealed {
  color: var(--ls-cloze-text-color);
  text-decoration: underline;
  text-underline-position: under;
}

.page-property-key {
  @apply font-medium whitespace-nowrap;
  color: var(--ls-secondary-text-color);
}

.page-property-key:hover {
  background-color: var(--ls-selection-background-color);
}

.cp__fenced-code-block {
  .not-edit {
    cursor: default;
  }
}

html.is-native-ios {
  audio {
    width: 100%;
    max-width: 350px;
  }
}

html:not(.is-mac) {
  body[data-active-keystroke="Control"] {
    .block-content {
      cursor: pointer;
    }
  }
}

html.is-mac {
  body[data-active-keystroke="Meta"] {
    .block-content {
      cursor: pointer;
    }
  }
}

.references-blocks {
  @apply mb-3;

  &-wrap {
    .foldable-title {
      @apply ml-3;

      .block-control {
        @apply relative right-[-5px] top-[1px];
      }
    }
  }

  &-item {
    @apply bg-gray-03 rounded p-4;

    > .only-page-blocks {
      @apply relative -left-[11px];
    }

    .with-foldable-page {
      > .preview-ref-link {
        .page-ref .ui__icon.ti {
          @apply top-[2px] left-0;
        }
      }
    }
  }

  .page-reference:hover {
    background: var(--lx-accent-04-alpha, var(--ls-tertiary-background-color, hsl(var(--primary)/.4)));
  }
}

.cp__right-sidebar-inner {
  .references-blocks-item {
    @apply bg-gray-04;
  }
}

.block-title-wrap a.tag, .block-body a.tag {
  font-size: initial;
  opacity: 1;
}

.positioned-properties {
  @apply text-sm;
}

.positioned-properties.block-left {
  .asset-container {
    @apply max-w-[120px];
  }

  .block-title-wrap {
    @apply hidden;
  }
}

.positioned-properties.block-right {
  button {
    @apply whitespace-nowrap mr-0.5;
  }

  .block-title-wrap {
    @apply overflow-hidden h-6 whitespace-nowrap text-ellipsis;
  }
}

.positioned-properties.block-below {
  .block-content.inline {
    @apply flex;
  }
}

.block-tags {
  @apply flex flex-row flex-wrap self-start items-center;
  min-height: 24px;
  max-width: 256px;
  margin-right: -16px;
}

.block-tag {
  @apply pr-1 flex flex-row items-center gap-1;
}

.block-tag a.tag {
  @apply flex text-sm font-normal items-center opacity-70;
}

.block-tag a.tag:hover {
  @apply opacity-100;
}

.block-tag span {
  @apply whitespace-nowrap overflow-hidden;
  max-width: 160px;
  text-overflow: ellipsis;
}

.block-content-wrapper svg, .view-actions svg {
  width: 18px;
  height: 18px;
}

.ls-type-warning svg {
  color: var(--rx-gray-09);
  width: 12px;
  height: 12px;
}

.ls-page-title .ls-page-icon svg, .ls-page-title .ls-page-icon button {
  width: 38px;
  height: 38px;
}

.ls-page-title .positioned-properties svg, .page-ref svg {
  width: 16px;
  height: 16px;
}

.ls-page-title .ls-page-icon button {
  margin-top: 8px;
}

.ls-page-title .block-tags {
  @apply relative -right-1 min-h-full;
}

.ls-code-editor-wrap {
  @apply relative w-full;

  .extensions__code-lang {
    @apply hidden;
  }

  > .code-block-actions {
    @apply absolute right-1 top-1 select-none z-[1] text-xs;

    button {
      @apply !py-0 h-4 text-muted-foreground hover:text-foreground text-xs px-1;
    }

    svg {
      width: 14px;
      height: 14px;
    }
  }
}

.ls-resize-image {
  @apply flex relative;

  .handle-left, .handle-right {
    @apply absolute w-[6px] h-[15%] min-h-[30px] bg-black/30 hover:bg-black/70
    top-[50%] left-[5px] rounded-full cursor-col-resize select-none
    translate-y-[-20%] opacity-0 border border-gray-200;
  }

  .handle-right {
    @apply left-auto right-[5px]
  }

  &:hover {
    .handle-left, .handle-right {
      @apply opacity-100;
    }
  }
}

.recent-block {
  transition: background-color 0.2s cubic-bezier(0, 1, 0, 1);
  background-color: var(--ls-secondary-background-color, var(--rx-gray-03));
}

.aspect-video {
  aspect-ratio: 16 / 9;
  height: auto;
}

